Optimize file analysis by streamlining entity saving logic and disabling JPA SQL logging